--- a/first.html
+++ b/first.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="list-styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="list-styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .topnav {
+      overflow: hidden;
+      background-color: rgb(27, 155, 123);
+    }
+
+    .topnav a {
+      float: left;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+
+    .topnav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
+    .topnav a.active {
+      background-color: #080808;
+      color: white;
+    }
+  </style>
 </head>
+
 <body>
+
+  <div class="topnav">
+    <a href="Titel_Page.html">Titel Page</a>
+    <a class = "active" href="first.html"> What even is a TCG?</a>
+    <a href="second.html">how to play a TCG (Yu-Gi-Oh!)</a>
+    <a href="third.html">Trading Card Games & money</a>
+    <a href="fourth.html">How TCGs came along</a>
+  </div>
     <h1>Trading Card Games</h1>
     
         <h2>What is even a Trading Card Game and what does it involve?</h2>
