some progress on website design

--- a/third.html
+++ b/third.html
@@ -7,36 +7,7 @@
   <link rel="stylesheet" href="list-styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-    }
-
-    .topnav {
-      overflow: hidden;
-      background-color: rgb(27, 155, 123);
-    }
-
-    .topnav a {
-      float: left;
-      color: #f2f2f2;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-size: 17px;
-    }
-
-    .topnav a:hover {
-      background-color: #ddd;
-      color: black;
-    }
-
-    .topnav a.active {
-      background-color: #080808;
-      color: white;
-    }
-  </style>
+  
 </head>
 
 <body>
@@ -46,7 +17,7 @@
     <a href="first.html"> What even is a TCG?</a>
     <a href="second.html">how to play a TCG (Yu-Gi-Oh!)</a>
     <a class = "active" href="third.html">Trading Card Games & money</a>
-    <a href="fourth.html">How TCGs came along</a>
+    <a href="fourth.html">Popularity and impact</a>
   </div>
         <h2>Trading Card Games & money</h2>
 
@@ -63,8 +34,10 @@
         <p>One third of Nintendo's income is made by their Pokemon Trading Card Game and earns them 750 million a year.</p>
         <p>There are different prices for buying Booster Packs and that essentially also reflects on the sale price for the cards.</p>
 
-        <img src="https://beckett-www.s3.amazonaws.com/news/news-content/uploads/2016/10/T206-Honus-Wagner-Sweet-Corporal-Jumbo.jpeg" alt="Honus Wagner 1909-11 T206" width="500" height="841">
-        <img src="https://i.ytimg.com/vi/jRDWyrHodvY/maxresdefault.jpg" alt="tournament black luster soldier" width="1280" height="720">
-
+     <div id=moneyCard>
+      <img src="https://beckett-www.s3.amazonaws.com/news/news-content/uploads/2016/10/T206-Honus-Wagner-Sweet-Corporal-Jumbo.jpeg" alt="Honus Wagner 1909-11 T206" width="250" height="420">
+      <img src="https://i.ytimg.com/vi/jRDWyrHodvY/maxresdefault.jpg" alt="tournament black luster soldier" width="640" height="360">
+    </div>
+        
 </body>
 </html>
