--- a/second.html
+++ b/second.html
@@ -7,36 +7,7 @@
   <link rel="stylesheet" href="list-styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-    }
-
-    .topnav {
-      overflow: hidden;
-      background-color: rgb(27, 155, 123);
-    }
-
-    .topnav a {
-      float: left;
-      color: #f2f2f2;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-size: 17px;
-    }
-
-    .topnav a:hover {
-      background-color: #ddd;
-      color: black;
-    }
-
-    .topnav a.active {
-      background-color: #080808;
-      color: white;
-    }
-  </style>
+  
 </head>
 
 <body>
@@ -46,13 +17,10 @@
     <a href="first.html"> What even is a TCG?</a>
     <a class = "active" href="second.html">how to play a TCG (Yu-Gi-Oh!)</a>
     <a href="third.html">Trading Card Games & money</a>
-    <a href="fourth.html">How TCGs came along</a>
+    <a href="fourth.html">Popularity and impact</a>
   </div>
   </div>
-
-    <h1>Trading Card Games</h1>
-
-        <h2>How to play a TCG (Yu-Gi-Oh!)</h2>
+        <h2>How to play Yu-Gi-Oh!</h2>
         
         <h3>How to play</h3>
 
@@ -128,7 +96,7 @@
         <p>That includes also summoning monsters and their effects and many other things the like</p>
         <img src="https://i.ytimg.com/vi/e-TVS2IrdsE/hqdefault.jpg" alt="sepll & trap cards symbols/types" width="480" height="360">
         <img src="https://s3.amazonaws.com/shonenjump.viz.com/drupal/art/ygo-trap-cards.jpg" alt="trap cards " width="700" height="200">
-        <img src="https://www.spriters-resource.com/download/69476/" alt="spell cards " width="811" height="703">
+        <img src="https://www.spriters-resource.com/download/69476/" alt="spell cards " width="1600" height="1400">
         
         <h3>Summoning Monsters</h3>
 
