--- a/Titel_Page.html
+++ b/Titel_Page.html
@@ -14,7 +14,7 @@
   <div class="topnav">
     <a class="active" href="Titel_Page.html">Titel Page</a>
     <a href="first.html"> What even is a TCG?</a>
-    <a href="second.html">how to play a TCG (Yu-Gi-Oh!)</a>
+    <a href="second.html">How to play a TCG (Yu-Gi-Oh!)</a>
     <a href="third.html">Trading Card Games & money</a>
     <a href="fourth.html">Popularity and impact</a>
   </div>
