--- a/second.html
+++ b/second.html
@@ -15,7 +15,7 @@
   <div class="topnav">
     <a href="Titel_Page.html">Titel Page</a>
     <a href="first.html"> What even is a TCG?</a>
-    <a class = "active" href="second.html">how to play a TCG (Yu-Gi-Oh!)</a>
+    <a class = "active" href="second.html">How to play a TCG (Yu-Gi-Oh!)</a>
     <a href="third.html">Trading Card Games & money</a>
     <a href="fourth.html">Popularity and impact</a>
   </div>
