--- a/Bootstrap site/index.html
+++ b/Bootstrap site/index.html
@@ -24,13 +24,15 @@
    
     <h1>Backround Information</h1>
     <p>_____________________</p>
-
+    
   <section>
     <a href="backround.html"> Backround Details</a>
+
+    <p class="text-warning">Species: Unkown</p>
     <p class="text-info">Birthplace: Unknown</p>
-    <p class="text-succes">Age: Unknown</p>
-    <p class="text-primary">Family: Uknown</p>
-    <p class="text-warning">Species: Ice cream man</p>
+    <p>Name: Unkown</p>
+    <p class="text-success">Age: Unknown</p>
+    <p class="text-primary">Family: Unknown</p>
     <p class="text-danger">Level: +999</p>
     <p class="text-muted">Job: Ice cream man</p>
 
